# haskell-timeseries

./: .gitignore  Autocorrelation.hs  CHANGELOG.md  Main.hs  PeakDetection.hs  PeakDetectionTest.hs  SeasonalityMatcher.hs  Util.hs  haskell-timeseries.cabal  hs-ts.hs  readme.md
