cabal-version: 2.4
name: haskell-timeseries
version: 0.1.0.0
license-file: LICENSE
maintainer: amman.vedi@gmail.com
author: ammanvedi
extra-source-files:
    CHANGELOG.md
    readme.md

library
    exposed-modules:
        Autocorrelation
        PeakDetection
    default-language: Haskell2010
    build-depends:
        base ^>=4.12.0.0,

executable haskell-timeseries
    main-is: Main.hs
    default-language: Haskell2010
    build-depends:
        base ^>=4.12.0.0,

Test-Suite test
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: PeakDetectionTest.hs
  other-modules:
    PeakDetection
    Util
  build-depends:
      haskell-timeseries,
      base ^>=4.12.0.0,
      HUnit -any
